<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_gravity="start"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="imageprofile" />

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/ThemeColors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_username"
                    style="@style/ThemeColors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_company"
                    style="@style/ThemeColors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Company"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_location"
                    style="@style/ThemeColors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Location"
                    android:textSize="14sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_margin="12dp"
                    android:background="@color/yellow_700"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center|top"
                        android:baselineAligned="false"
                        android:elevation="7dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/ThemeColors"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/repository"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tv_repository"
                                style="@style/ThemeColors"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/number"
                                android:textAlignment="center"
                                android:textSize="25sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/ThemeColors"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tv_followers"
                                style="@style/ThemeColors"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/number"
                                android:textAlignment="center"
                                android:textSize="25sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/ThemeColors"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tv_following"
                                style="@style/ThemeColors"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/number"
                                android:textAlignment="center"
                                android:textSize="25sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab_layout_selector"
            app:tabIndicatorColor="@android:color/black"
            app:tabSelectedTextColor="@color/black"
            app:tabTextColor="@android:color/black" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/yellow_700"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_anchor="@id/viewPager"
        app:layout_anchorGravity="bottom|end"
        app:tint="@null" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>